<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="450dp"
            android:longClickable="false">

    <EditText android:id="@+id/txtText"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/injury_hint"
              android:layout_margin="10dip"
              android:layout_below="@+id/determinant_spinner"
              android:layout_alignParentLeft="true"
              android:text="@string/injury_default"
              android:singleLine="true"
              android:nextFocusDown="@+id/locText"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/determinant_spinner"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/locText"
            android:layout_below="@+id/txtText"
            android:hint="@string/loc_hint"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:text="@string/location_default"
            android:nextFocusDown="@+id/crossText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/crossText"
            android:layout_below="@+id/locText"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:hint="@string/cross_hint"
            android:text="@string/cross_default"
            android:nextFocusDown="@+id/addlText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numText"
            android:hint="@string/dispatcher_hint"
            android:layout_below="@+id/addlText"
            android:layout_alignLeft="@+id/btnSpeak"
            android:text="@string/dispatcher_default"
            android:singleLine="true"
            android:nextFocusDown="@+id/btnSpeak"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/addlText"
            android:hint="@string/additional_hint"
            android:layout_below="@+id/crossText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/additional_default"
            android:nextFocusDown="@+id/numText"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_text"
                android:id="@+id/simCheck"
                android:checked="true"
                android:layout_below="@+id/numText"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="13dp"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/futureTriggerText"
                android:id="@+id/futureTrigger"
                android:layout_below="@+id/simCheck"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="11dp"/>

        <Button android:id="@+id/btnSpeak"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_text"
                android:layout_margin="10dip"
                android:layout_below="@+id/futureTrigger"
                android:layout_alignParentLeft="true">
            <requestFocus />
        </Button>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/det_string"
                android:id="@+id/textView"
                android:layout_above="@+id/txtText"
                android:layout_alignRight="@+id/simCheck"/>
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
